Closed
Bug 1700702
Opened 4 years ago
Closed 4 years ago
Unexpected overscroll in single-line text fields
Categories
(Core :: Panning and Zooming, defect, P2)
Core
Panning and Zooming
Tracking
()
VERIFIED
FIXED
89 Branch
| Tracking | Status | |
|---|---|---|
| firefox89 | --- | verified |
People
(Reporter: mstange, Assigned: hiro)
References
Details
Attachments
(3 files)
Steps to reproduce:
- Set apz.overscroll.enabled to true.
- Load the attached testcase.
- Use a touchpad to horizontally scroll the text field's contents to the end.
Expected results:
There should be no rubber banding at the end of the text field.
Actual results:
The text bounces.
Updated•4 years ago
|
Severity: -- → S2
Priority: -- → P2
| Assignee | ||
Comment 1•4 years ago
|
||
A way we can do it right now is checking mDisregardedDirection, which is only set for single line text controls and disallow overscrolling. If we found other cases we should disallow overscrolling where the mDisregardedDirection is not suitable, we will add a new flag for the cases.
Assignee: nobody → hikezoe.birchill
Status: NEW → ASSIGNED
| Assignee | ||
Comment 2•4 years ago
|
||
| Assignee | ||
Comment 3•4 years ago
|
||
Depends on D110052
Pushed by hikezoe.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/24999111f7e9
Split overscroll tests into a new file. r=botond
https://hg.mozilla.org/integration/autoland/rev/52d2c9e672d0
Disallow overscrolling in single line text controls. r=botond
Comment 5•4 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/24999111f7e9
https://hg.mozilla.org/mozilla-central/rev/52d2c9e672d0
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
status-firefox89:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
Comment 6•4 years ago
•
|
||
Verified fixed in beta 89.0b2 (20210420191345) and Nightly 90.0a1 (2021-04-20) (20210420213949) on MacOS 11.2.3.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•