Bug 1700702 - Disallow overscrolling in single line text controls. r=botond

Depends on D110052

Differential Revision: https://phabricator.services.mozilla.com/D110053